  the same scip instance, if not an error is thrown
- added new sorting method SCIPsortRealIntPtr, SCIPsortDownRealIntPtr and all corresponding methods
- the indicator constraint can now decompose the problem, i.e., not add the linear constraint to the problem if all of its variables are continuous
- added new dialog for setting heuristics to aggressive, fast, or off in interactive shell

performance improvements:
- improved settings/emphasis/cpsolver.set to decrease time per node
- reworked access to pseudo solution and inference value of variables in order to reduce function calls
- improved zerohalf cut separator: more than one delta is tested for MIR cuts, better handling of dense base inequalities, 
  faster scaling of fractional coefficients in rows (now enabled), improved parameter settings (presolving)   
- changed default value of parameter "nodeselection/restartdfs/selectbestfreq" to 0;
  this means if the current node has no children the node with the best bound is selected (SCIPgetBestboundNode()) 

fixed bugs:
- fixed bug in lpi_clp.cpp: SCIPlpiChgBounds checks if the column status exists in Clp before using it
- fixed bug concerning assert(!SCIPlpDivingObjChanged(lp)) which was caused by wrong infinity double parameters for cplex
- fixed bug in reader_zpl.c which appeared using the parameter "reading/zplreader/parameters" 
- fixed bug in trivial heuristic: the locking solution might have falsely initialized some values to zero
- fixed bug in cons_setppc: aggregated variables were not correctly removed in presolving
- fixed bug in cons_linear.c: binary variables should not be multi-aggregated
- fixed bug in tree.c: propagate implications on multi-aggregated should not be performed 
- fixed bugs in flatzinc readers with constraints that exclusively consist of constants
- fixed bug in reader_gms: correct handling of nonstandard bounds on general integer variables
- fixed bug in conflict.c in the method conflictsetAddBound() 