@@ -88,6 +88,7 @@ features:
 - added new sorting method SCIPsortRealIntPtr, SCIPsortDownRealIntPtr and all corresponding methods
 - the indicator constraint can now decompose the problem, i.e., not add the linear constraint to the problem if all of its variables are continuous
 - added new dialog for setting heuristics to aggressive, fast, or off in interactive shell
+- the vbc visualization adds the branching type (lower or upper bound change) and the new bound to the node information 
 
 performance improvements:
 - improved settings/emphasis/cpsolver.set to decrease time per node
